--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,23 @@ header a {
     line-height: 100px;
     font-size: 1.2rem;
 }
+
+.jumbotron {
+    height: 490px;
+    width: 100%;
+}
+
+.jumbo_img img {
+    height: 100%;
+    margin-top: 20px;
+    height: 300px;
+    text-align: center;
+}   
+
+
+body > div > div > div > div > div > h1 {
+    padding-top: 1rem;
+}
+body > div > div > div > div > div > div > div {
+    padding: 0.5rem;
+}
