--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,3 +35,18 @@ body > div > div > div > div > div > h1 {
 body > div > div > div > div > div > div > div {
     padding: 0.5rem;
 }
+
+.ib-in img {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
+
+
+.ib_l {     
+    width: 30%;
+    height: 3px;
+    background-color: #2C3E50;
+    margin: 0 5px;
+}
+
